Update and rename task1/任务.md to Task1 数据集探索/任务.md

--- a/Task1 数据集探索/任务.md
+++ b/Task1 数据集探索/任务.md
@@ -9,11 +9,17 @@
 参考：
 
 TENSORFLOW从入门到精通之——TENSORFLOW基本操作 http://www.tensorflownews.com/2018/03/28/tensorflow_base/
+
 tensorflow简介 http://wiki.jikexueyuan.com/project/tensorflow-zh/get_started/introduction.html
+
 tensorflow基本使用 http://wiki.jikexueyuan.com/project/tensorflowzh/get_started/basic_usage.html
+
 莫凡tensorflow https://morvanzhou.github.io/tutorials/machine-learning/tensorflow/
+
 史上最全的Tensorflow学习资源汇总 https://zhuanlan.zhihu.com/p/35515805
+
 微软周明：自然语言处理的历史与未来 http://zhigu.news.cn/2017-06/08/c_129628590.htm
+
 【Task1 数据集探索 (2 days)】
 
 1.数据集
@@ -31,7 +37,8 @@ tensorflow基本使用 http://wiki.jikexueyuan.com/project/tensorflowzh/get_star
 参考博客中的数据集部分和预处理部分：
 
 CNN字符级中文文本分类-基于TensorFlow实现 - 一蓑烟雨 - CSDN博客
-参考代码：text-classification-cnn-rnn/cnews_loader.py at mas...
+参考代码：https://github.com/gaussic/text-classification-cnn-rnn/blob/master/data/cnews_loader.py
+
 4.学习召回率、准确率、ROC曲线、AUC、PR曲线这些基本概念
 
 参考1：机器学习之类别不平衡问题 (2) —— ROC和PR曲线_慕课手记
